<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/b_save_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_subject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/button_color"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        >
    </Button>

    <Button
        android:id="@+id/b_list_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_subjects"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_save_subject"
        android:backgroundTint="@color/button_color"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        >
    </Button>

    <Button
        android:id="@+id/b_add_attendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_attendance"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/b_list_subject"
        android:backgroundTint="@color/button_color"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        >
    </Button>

    <Button
        android:id="@+id/b_list_attendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_attendnance"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/b_add_attendance"
        android:backgroundTint="@color/button_color"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        >
    </Button>

    <Button
        android:id="@+id/b_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/button_color"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="34dp"
        >
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>